# fmodel-rust-postgres

./: Cargo.toml  README.md  fmodel_rust_postgres.control
.github/workflows/: lint-and-test.yml
sql/: event_sourcing.sql
src/: lib.rs
src/application/: mod.rs  order_materialized_view.rs  order_restaurant_aggregate.rs  restaurant_materialized_view.rs
src/domain/: api.rs  mod.rs  order_decider.rs  order_saga.rs  order_view.rs  restaurant_decider.rs  restaurant_saga.rs  restaurant_view.rs
src/framework/application/: event_sourced_aggregate.rs  materialized_view.rs  mod.rs
src/framework/domain/: api.rs
src/framework/infrastructure/: errors.rs  event_repository.rs  mod.rs  view_state_repository.rs
src/infrastructure/: mod.rs  order_restaurant_event_repository.rs  order_view_state_repository.rs  restaurant_view_state_repository.rs
